# mosaico-software

./: .gitignore  CROSS-COMPILE.md  Dockerfile  README.md  start-web.sh  start.sh
gatt/: ble-server.py  db.py  interop.py  main.py
gatt/api/services/: widget_service.py
gatt/data/: db.sqlite
gatt/services/: interop.py  matrix_service.py  runner_service.py  service_dispatcher.py  welcome_service.py
matrix/: .gitignore  CMakeLists.txt  CROSS-COMPILE.md  Makefile  MatrixExample.cbp  Mosaico_Software.cbp  README.md  cmake_install.cmake  configs.cpp  cross-compile.sh  main.cpp  python-socket.cpp  start.sh  sync.sh  test.py  utils.cpp
matrix/assets/images/: empty-square.ppm  heart.ppm  loading.ppm  loading.xcf  square.ppm
matrix/assets/images/animations/loading/: 0.ppm  1.ppm
matrix/assets/runners/murkrow/test/: meta.json  runner.chai
matrix/logger/: console-logger.cpp  logger.h
matrix/matrix/: canvas-buffer.cpp  canvas-layer.cpp  matrix-slideshow.cpp  widget-renderer.cpp
matrix/matrix/drawables/: animation-drawer.cpp  colors.cpp  drawable-canvas.cpp  drawable-ppm.cpp  drawable-shape.cpp  drawable-text.cpp  drawable-text.h  drawable.cpp  drawable.h
matrix/matrix/matrices/: hardware-matrix.cpp  matrix-builder.cpp  matrix-device.cpp  matrix-stream.cpp  web-matrix.cpp  x11-matrix.cpp
matrix/matrix/runners/: loading-runner.cpp  matrix-runner.cpp  matrix-runner.h
matrix/matrix/runners/dynamic/: dynamic-runner-parser.cpp  dynamic-runner.cpp
matrix/matrix/runners/dynamic/modules/: rest-module.cpp
matrix/matrix/runners/games/: game.cpp  pixel-mover.cpp
matrix/matrix/widgets/: idle-widget.cpp  loading-runner.cpp  loading-widget.cpp  matrix-widget.cpp  matrix-widget.h  test-widget.cpp
matrix/matrix/widgets/dynamic/: dynamic-widget-metadata.cpp  dynamic-widget-parser.cpp  dynamic-widget.cpp  old.cpp
matrix/matrix/widgets/dynamic/modules/: colors-module.cpp  mosaico-module.cpp
matrix/matrix/widgets/games/: flappy-bird.cpp  game.cpp  pixel-mover.cpp  snake.cpp  tetris.cpp
matrix/networking/: socket.cpp
matrix/networking/client/: api-client.cpp  models.cpp
matrix/networking/server/: tcp-server.cpp  udp-server.cpp
matrix/networking/server/ble/: ble-server.cpp  ble-server.py
matrix/playgrounds/chai/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  test.chai
matrix/playgrounds/database/: database.no  makefile
networking/: configs.py  interop.py  main.py  requirements.txt
networking/coap/: dynamic_resource.py  responses.py
networking/coap/services/: active_widget.py  develop_widget_config.py  installed_widgets.py  matrix_control.py  slideshows.py  widget_configurations.py  widget_service.py  widgets.py
networking/core/: configs.py  helpers.py  interop.py  slideshow_manager.py  utils.py
networking/data/: db.py  db.sqlite  db.sqlite-journal
networking/data/repositories/: configurations.py  settings.py  slideshows.py  widget_configurations.py  widgets.py
networking/gatt/: service_dispatcher.py
networking/gatt/services/: matrix_control.py  matrix_service.py  service_dispatcher.py
networking/new_widgets/: date.py
networking/rest/: client.py  exceptions.py
networking/rest/services/: widget_service.py
networking/storage/widgets/: .gitignore
networking/storage/widgets/local_dev/new_project/: config-form.json  mosaico.json  widget.chai  widget.py
stream/: requirements.txt  stream.py
stream/templates/: index.html
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  example  main.cpp
test2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
test3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  example  main.cpp
test4/: CMakeCache.txt  Makefile  cmake_install.cmake  example  main.cpp
